--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 #content {
-	width: 36.81rem;
+	width: 33%;
 	position: relative;
-	left: 36.81rem;
+	left: 33%;
 	text-align: center;
 }
 #content a:link {
