--- a/css/index.css
+++ b/css/index.css
@@ -7,19 +7,19 @@ main {
 #content {
 	width: 24.54rem;
 	position: relative;
-	left: 7.67rem;
-	bottom: 11.35rem;
+	left: 6.1%;
+	bottom: 180px;
 }
 #main-title {
 	font-family: "Brawler";
 	font-size: 5.52em;
 	text-align: left;
 	position: relative;
-	left: 18.4rem;
+	left: 17%;
 }
 #title-bar ul {
 	display: table;
-	width: 120em;
+	width: 100%;
 }
 #title-bar li {
 	display: table-cell;
@@ -27,23 +27,23 @@ main {
 }
 #main-img {
 	position: relative;
-	right: 12.5rem;
+	right: 35%;
 	z-index: 1
 }
 #black-box {
 	position: relative;
 	left: 0em;
-	top: 27.6rem;
+	top: 425px;
 	z-index: 3;
 }
 #sotm {
 	position: relative;
-	left: 62.88rem;
+	left: calc(600px + 115%);
 	bottom: 27.6rem;
 }
 #sketch-caption {
 	position:relative;
-	left: 26.5rem;
+	left: 120%;
 	bottom: 11.66rem;
-	width: 36.8rem;
+	width: 600px;
 }
